# CompilerBugWithVirtualInheritance

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compilerbug.cpp
.github/workflows/: cmake.yml
